@@ -1,3 +1,7 @@
+2008-04-20  Andreas Kirschbaum
+
+	* Add auto-pickup dialog.
+
 2008-04-13  Andreas Kirschbaum
 
 	* Display book contents at top of page.
